# POST-Rec

./: .dockerignore  .env.docker.example  .env.example  .env.local.infra.example  .env.production.example  .env.remote.example  .gitignore  Dockerfile  README.md  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: README.md  pull_request_template.md
.github/workflows/: ci.yml  open-pull-request.yml  release.yml
apps/api/: database.py  dependencies.py  main.py  models.py  settings.py
apps/web/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.subpath.conf  package-lock.json  package.json  tsconfig.app.json  (+1 more)
data/: expert_labels_template.json  ranking_weights_calibrated.json
docs/: README.md  analysis-spec.md  fggv-evaluation.md  how-it-works.md  retrieval-resilience.md  systematic-literature-review.md
migrations/: env.py
papers/: POST-Rec_Literature-Grounded_Research_Ideation.md
scripts/: README.md  benchmark_openalex_filters.py  bootstrap_homelab.py  check_celery_metrics.py  check_migrations.py  configure_domain.py  deploy_config.py  deploy_grafana.py  deploy_grafana_dashboard_hostinger.py  deploy_observability_homelab.py  deploy_portainer.py  deploy_shared_infra.py  docker_bootstrap.ps1  docker_bootstrap.sh  docker_migrate.py  enable_rabbitmq_celery_compat.py  evolution_init.py  evolution_pair.sh  export_analysis_dataset.py  export_anonymized_validation_data.py  generate_research_report.py  generate_traefik_apps.py  grafana_dashboard.py  hostinger_deploy.py  import_grafana_dashboard.py  migrate_coolify_shared_db.py  openalex_probe.py  openalex_scenarios.py  prod_integration_check.py  publish_hostinger.py  refactor_vertical_slices.py  refactor_web_vertical_slices.py  remote_finish_setup.py  remote_setup.py  run_offline_evaluation.py  run_worker.ps1  seed_qualis.py  seed_qualis_hostinger.py  ssh_run.py  validate_grafana_api.py  (+5 more)
tests/: conftest.py
(+524 files in other folders)
